--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                     <li><a href="#" data-level="2021" title="filter books by year">2021</a></li>
                     <li><a href="#" data-level="2022" title="filter books by year">2022</a></li>
                     <li><a href="#" data-level="2023" title="filter books by year">2023</a></li>
-                    <li><a href="#" data-level="2023" title="filter books by year">2025</a></li>
-                    <li><a href="#" data-level="2023" title="filter books by year">Dr. Wooday P. Krishna in Kannada- News Papers</a></li>
+                    <li><a href="#" data-level="2025" title="filter books by year">2025</a></li>
+                    <li><a href="#" data-level="Dr. Wooday P. Krishna in News Papers" title="filter books by year">Dr. Wooday P. Krishna in News Papers</a></li>
                 </ul>
             </div>
         </div>
