--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <li><a href="#" data-level="2022" title="filter books by year">2022</a></li>
                     <li><a href="#" data-level="2023" title="filter books by year">2023</a></li>
                     <li><a href="#" data-level="2025" title="filter books by year">2025</a></li>
-                    <li><a href="#" data-level="Dr. Wooday P. Krishna in News Papers" title="filter books by year">Dr. Wooday P. Krishna in News Papers</a></li>
+                    <li><a href="#" data-level="InNews" title="filter books by year">Dr. Wooday P. Krishna in News Papers</a></li>
                 </ul>
             </div>
         </div>
